[package]
name = "erosion-coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The "Make Each Monday Entertaining As A Service" Module
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
winit = { git = "https://github.com/rust-windowing/winit.git" , features = ["rwh_05"] }
cgmath = { git = "https://github.com/rustgd/cgmath.git" }
rand = { git = "https://github.com/rust-random/rand.git" }
serde = { git = "https://github.com/serde-rs/serde.git" , features = ["derive"] }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" } 
vulkano-util = { git = "https://github.com/vulkano-rs/vulkano.git" }
